--- a/pom.xml
+++ b/pom.xml
@@ -4,13 +4,7 @@
   <artifactId>offtheground</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>war</packaging>
-  
-  <!-- <parent>
-  	<groupId>com.xxx</groupId>
-  	<artifactId>parent</artifactId>
-  	<version>0.0.1-SNAPSHOT</version>
-  	<relativePath>../parent/pom.xml</relativePath>
-  </parent> -->
+
   
   <dependencies>
   	<dependency>
@@ -25,42 +19,116 @@
   		<version>4.9</version>
   		<scope>test</scope>
   	</dependency>
+  	<dependency>
+    	<groupId>org.springframework</groupId>
+    	<artifactId>spring-core</artifactId>
+    	<version>5.1.7.RELEASE</version>
+    	<scope>compile</scope>
+	</dependency> 
+	<dependency>
+    	<groupId>org.springframework</groupId>
+    	<artifactId>spring-beans</artifactId>
+    	<version>5.1.7.RELEASE</version>
+    	<scope>compile</scope>
+	</dependency>
+  	<dependency>
+    	<groupId>org.springframework</groupId>
+    	<artifactId>spring-context</artifactId>
+    	<version>5.1.7.RELEASE</version>
+    	<scope>compile</scope>
+	</dependency>
+	<dependency>
+    	<groupId>com.alibaba</groupId>
+    	<artifactId>fastjson</artifactId>
+    	<version>1.2.58</version>
+	</dependency>
+	<dependency>
+   	 	<groupId>commons-fileupload</groupId>
+   	 	<artifactId>commons-fileupload</artifactId>
+    	<version>1.3.3</version>
+	</dependency>
+	<dependency>
+        <groupId>com.zaxxer</groupId>
+        <artifactId>HikariCP</artifactId>
+        <version>3.3.1</version>
+    </dependency>
+    <dependency>
+    	<groupId>mysql</groupId>
+		<artifactId>mysql-connector-java</artifactId>
+    	<version>5.1.48</version>
+	</dependency>
+	<dependency>
+    	<groupId>org.springframework</groupId>
+    	<artifactId>spring-aspects</artifactId>
+    	<version>5.1.7.RELEASE</version>
+	</dependency>
+	<dependency>
+   		<groupId>org.springframework</groupId>
+    	<artifactId>spring-webmvc</artifactId>
+    	<version>5.1.7.RELEASE</version>
+	</dependency>
+	<dependency>
+   		<groupId>org.springframework</groupId>
+    	<artifactId>spring-jdbc</artifactId>
+    	<version>5.1.7.RELEASE</version>
+	</dependency>
+	<dependency>
+    	<groupId>org.springframework</groupId>
+    	<artifactId>spring-web</artifactId>
+    	<version>5.1.7.RELEASE</version>
+	</dependency>
+	<dependency>
+    	<groupId>cglib</groupId>
+    	<artifactId>cglib</artifactId>
+    	<version>3.3.0</version>
+	</dependency>
+	<dependency>
+	    <groupId>org.slf4j</groupId>
+	    <artifactId>slf4j-log4j12</artifactId>
+	    <version>1.7.25</version>
+	    <scope>test</scope>
+	</dependency>
+	<dependency>
+	    <groupId>com.alibaba</groupId>
+	    <artifactId>fastjson</artifactId>
+	    <version>1.2.58</version>
+	</dependency>
+	<dependency>
+	    <groupId>org.mybatis</groupId>
+	    <artifactId>mybatis</artifactId>
+	    <version>3.5.3</version>
+	</dependency>
+	<dependency>
+	    <groupId>org.mybatis</groupId>
+	    <artifactId>mybatis-spring</artifactId>
+	    <version>2.0.3</version>
+	</dependency>
+	<dependency>
+	    <groupId>org.mybatis.generator</groupId>
+	    <artifactId>mybatis-generator-core</artifactId>
+	    <version>1.4.0</version>
+	</dependency>
+	<dependency>
+	    <groupId>com.github.pagehelper</groupId>
+	    <artifactId>pagehelper</artifactId>
+	    <version>5.1.11</version>
+	</dependency>
+	<dependency>
+	    <groupId>tk.mybatis</groupId>
+	    <artifactId>mapper</artifactId>
+	    <version>4.1.5</version>
+	</dependency>
+	<dependency>
+	    <groupId>redis.clients</groupId>
+	    <artifactId>jedis</artifactId>
+	    <version>3.2.0</version>
+	</dependency>
+	<dependency>
+	    <groupId>org.apache.shiro</groupId>
+	    <artifactId>shiro-all</artifactId>
+	    <version>1.4.2</version>
+	</dependency>
+	
   </dependencies>
-  
-  <build>
-  	<finalName>OffTheGound</finalName>
-  	<plugins>
-  		<plugin>
-  			<groupId>org.codehaus.cargo</groupId>
-  			<artifactId>cargo-maven2-plugin</artifactId>
-  			<version>1.2.3</version>
-  			
-  			<configuration>
-  				<container>
-  					<containerId>tomcat8x</containerId>
-  					<home>E:\Apache Software Foundation\Tomcat 8.0</home>
-  				</container>
-  				<configuration>
-  					<type>existing</type>
-  					<home>E:\Apache Software Foundation\Tomcat 8.0</home>
-  					<!-- <properties>
-  						<cargo.servlet.port>8080</cargo.servlet.port>
-  					</properties> -->
-  				</configuration>
-  				
-  				<executions>
-  					<execution>
-  						<id>cargo-run</id>
-  						<phase>install</phase>
-  						<goals>
-  							<goal>run</goal>
-  						</goals>
-  					</execution>
-  				</executions>
-  			</configuration>
-  		</plugin>
-  	</plugins>
-  	
-  </build>
   
 </project>
