--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,8 +1,36 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" id="WebApp_ID" version="2.5">
-<welcome-file-list>
-	<welcome-file>index.html</welcome-file>
-</welcome-file-list>
+  <context-param>
+        <param-name>contextConfigLocation</param-name>
+        <param-value>classpath:/properties/ApplicationContext.xml</param-value>
+  </context-param>
+  <listener>
+        <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+  </listener>
+  
+  <!-- The front controller of this Spring Web application, responsible for handling all application requests -->
+	<servlet>
+		<servlet-name>springDispatcherServlet</servlet-name>
+		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+		<init-param>
+			<param-name>contextConfigLocation</param-name>
+			<param-value>classpath:/properties/springmvc.xml</param-value>
+		</init-param>
+		<load-on-startup>1</load-on-startup>
+	</servlet>
 
-
+	<!-- Map all requests to the DispatcherServlet for handling -->
+	<servlet-mapping>
+		<servlet-name>springDispatcherServlet</servlet-name>
+		<url-pattern>/data/*</url-pattern>
+	</servlet-mapping>
+  
+  <servlet>
+    <servlet-name>PatchServlet</servlet-name>
+    <servlet-class>otg.servlet.PatchServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>PatchServlet</servlet-name>
+    <url-pattern>/patch</url-pattern>
+  </servlet-mapping>
 </web-app>
