--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,11 @@
   
   <dependencies>
   	<dependency>
+	    <groupId>org.apache.maven.plugins</groupId>
+	    <artifactId>maven-resources-plugin</artifactId>
+	    <version>2.6</version>
+	</dependency>
+  	<dependency>
   		<groupId>javax.servlet</groupId>
   		<artifactId>servlet-api</artifactId>
   		<version>2.5</version>
@@ -130,5 +135,9 @@
 	</dependency>
 	
   </dependencies>
+  <properties>
+	<maven.compiler.target>1.8</maven.compiler.target>
+	<maven.compiler.source>1.8</maven.compiler.source>
+  </properties>
   
 </project>
